# vhpc-toolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
config/: vCenter.conf
docs/: README.md  _coverpage.md  _sidebar.md  available-keys.md  code-of-conduct.md  commands.md  common-commands.md  example.md  host-commands.md  how-to-add.md  index.html  install.md  license.md  overview.md  sample-operations.md  vm-commands.md
documentation/: README.md  _sidebar.md  index.html  sample-operations.md
examples/cluster-scripts/: cluster-gpu-passthru.conf  cluster-linked-clone.conf  cluster-pvrdma.conf  cluster-simple.conf  cluster-sriov-gpu.conf  cluster-sriov.conf  cluster-vgpu.conf  rhel-hpc-demo-cluster.conf
examples/post-scripts/: hello_world1.sh  hello_world2.sh  install_cuda.sh  install_openmpi.sh  rhel-hpc-demo-frontend.sh
vhpc_toolkit/: cluster.py  command.py  config_objs.py  connect.py  get_args.py  get_objs.py  log.py  operations.py  version.py  view.py  wait.py
